src/ios/em_bridge.h

// ─── Opaque engine handle ────────────────────────────────────────────────────
typedef struct EMEngine EMEngine;
// Beat/tempo snapshot polled by Swift at 60 Hz
typedef struct {
    float   bpm;
    int     bar;
    int     beat;
    bool    isPlaying;
    float   midiProgress;   // 0.0 – 1.0
    int     currentStep;    // drum sequencer step (0-15)
    bool    audioRunning;
    bool    midiConnected;
    double  latencyMs;
} EMBeatInfo;
// 12 drum rows × 16 steps, each byte is velocity (0 = off)
typedef struct {
    uint8_t grid[12][16];
    int     numRows;
    int     numSteps;
    char    patternName[64];
} EMDrumGrid;
// ─── Lifecycle ───────────────────────────────────────────────────────────────
EMEngine* em_create(void);