flutter_app/lib/bindings/em_bridge.dart

import 'dart:ffi' as ffi;
import 'dart:io';
import 'package:ffi/ffi.dart';

// ─── Native structs ─────────────────────────────────────────────────────────

final class EMBeatInfo extends ffi.Struct {
  @ffi.Float()
  external double bpm;

  @ffi.Int32()
  external int bar;

  @ffi.Int32()
  external int beat;

  @ffi.Bool()
  external bool isPlaying;

  @ffi.Float()
  external double midiProgress;

  @ffi.Int32()
  external int currentStep;

  @ffi.Bool()
  external bool audioRunning;

  @ffi.Bool()
  external bool midiConnected;

  @ffi.Double()
  external double latencyMs;
}

final class EMDrumGrid extends ffi.Struct {
  @ffi.Array(12 * 16)
  external ffi.Array<ffi.Uint8> grid;

  @ffi.Int32()
  external int numRows;

  @ffi.Int32()
  external int numSteps;

  @ffi.Array(64)
  external ffi.Array<ffi.Uint8> patternName;
}

// ─── Native function typedefs ────────────────────────────────────────────────

typedef _EmCreateNative = ffi.Pointer<ffi.Void> Function();
typedef _EmCreateDart = ffi.Pointer<ffi.Void> Function();

typedef _EmDestroyNative = ffi.Void Function(ffi.Pointer<ffi.Void> e);
typedef _EmDestroyDart = void Function(ffi.Pointer<ffi.Void> e);

typedef _EmBoolNative = ffi.Bool Function(ffi.Pointer<ffi.Void> e);
typedef _EmBoolDart = bool Function(ffi.Pointer<ffi.Void> e);

typedef _EmVoidNative = ffi.Void Function(ffi.Pointer<ffi.Void> e);
typedef _EmVoidDart = void Function(ffi.Pointer<ffi.Void> e);

typedef _EmSetTempoNative = ffi.Void Function(ffi.Pointer<ffi.Void> e, ffi.Float bpm);
typedef _EmSetTempoDart = void Function(ffi.Pointer<ffi.Void> e, double bpm);

typedef _EmGetTempoNative = ffi.Float Function(ffi.Pointer<ffi.Void> e);
typedef _EmGetTempoDart = double Function(ffi.Pointer<ffi.Void> e);

typedef _EmPollBeatInfoNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Pointer<EMBeatInfo> out);
typedef _EmPollBeatInfoDart = void Function(
    ffi.Pointer<ffi.Void> e, ffi.Pointer<EMBeatInfo> out);

typedef _EmDrumPresetCountNative = ffi.Int32 Function();
typedef _EmDrumPresetCountDart = int Function();

typedef _EmDrumSetPresetNative = ffi.Void Function(ffi.Pointer<ffi.Void> e, ffi.Int32 idx);
typedef _EmDrumSetPresetDart = void Function(ffi.Pointer<ffi.Void> e, int idx);

typedef _EmDrumGetPresetNative = ffi.Int32 Function(ffi.Pointer<ffi.Void> e);
typedef _EmDrumGetPresetDart = int Function(ffi.Pointer<ffi.Void> e);

typedef _EmDrumGetPresetNameNative = ffi.Pointer<ffi.Char> Function(ffi.Int32 idx);
typedef _EmDrumGetPresetNameDart = ffi.Pointer<ffi.Char> Function(int idx);

typedef _EmDrumToggleStepNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 row, ffi.Int32 step);
typedef _EmDrumToggleStepDart = void Function(
    ffi.Pointer<ffi.Void> e, int row, int step);

typedef _EmDrumGetGridNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Pointer<EMDrumGrid> out);
typedef _EmDrumGetGridDart = void Function(
    ffi.Pointer<ffi.Void> e, ffi.Pointer<EMDrumGrid> out);

typedef _EmMidiPlayerLoadNative = ffi.Bool Function(
    ffi.Pointer<ffi.Void> e, ffi.Pointer<ffi.Char> path);
typedef _EmMidiPlayerLoadDart = bool Function(
    ffi.Pointer<ffi.Void> e, ffi.Pointer<ffi.Char> path);

typedef _EmMidiPlayerProgressNative = ffi.Float Function(ffi.Pointer<ffi.Void> e);
typedef _EmMidiPlayerProgressDart = double Function(ffi.Pointer<ffi.Void> e);

typedef _EmMidiPlayerSeekNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Float fraction);
typedef _EmMidiPlayerSeekDart = void Function(
    ffi.Pointer<ffi.Void> e, double fraction);

typedef _EmVoiceLayerCountNative = ffi.Int32 Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot);
typedef _EmVoiceLayerCountDart = int Function(
    ffi.Pointer<ffi.Void> e, int slot);

typedef _EmVoiceAddLayerNative = ffi.Bool Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot);
typedef _EmVoiceAddLayerDart = bool Function(
    ffi.Pointer<ffi.Void> e, int slot);

typedef _EmVoiceRemoveLayerNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot, ffi.Int32 layerIndex);
typedef _EmVoiceRemoveLayerDart = void Function(
    ffi.Pointer<ffi.Void> e, int slot, int layerIndex);

typedef _EmVoiceSetProgramNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot, ffi.Int32 program);
typedef _EmVoiceSetProgramDart = void Function(
    ffi.Pointer<ffi.Void> e, int slot, int program);

typedef _EmVoiceGetProgramNative = ffi.Int32 Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot);
typedef _EmVoiceGetProgramDart = int Function(
    ffi.Pointer<ffi.Void> e, int slot);

typedef _EmVoiceGetLayerNameNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot, ffi.Int32 layer,
    ffi.Pointer<ffi.Char> buf, ffi.Int32 bufLen);
typedef _EmVoiceGetLayerNameDart = void Function(
    ffi.Pointer<ffi.Void> e, int slot, int layer,
    ffi.Pointer<ffi.Char> buf, int bufLen);

typedef _EmVoiceNoteOnNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot, ffi.Uint8 note, ffi.Uint8 velocity);
typedef _EmVoiceNoteOnDart = void Function(
    ffi.Pointer<ffi.Void> e, int slot, int note, int velocity);

typedef _EmVoiceNoteOffNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot, ffi.Uint8 note);
typedef _EmVoiceNoteOffDart = void Function(
    ffi.Pointer<ffi.Void> e, int slot, int note);

typedef _EmSamplerSetNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot, ffi.Int32 layer, ffi.Float value);
typedef _EmSamplerSetDart = void Function(
    ffi.Pointer<ffi.Void> e, int slot, int layer, double value);

typedef _EmSamplerGetNative = ffi.Float Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot, ffi.Int32 layer);
typedef _EmSamplerGetDart = double Function(
    ffi.Pointer<ffi.Void> e, int slot, int layer);

typedef _EmSamplerGetIntNative = ffi.Int32 Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot, ffi.Int32 layer);
typedef _EmSamplerGetIntDart = int Function(
    ffi.Pointer<ffi.Void> e, int slot, int layer);

typedef _EmSamplerSetIntNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot, ffi.Int32 layer, ffi.Int32 value);
typedef _EmSamplerSetIntDart = void Function(
    ffi.Pointer<ffi.Void> e, int slot, int layer, int value);

typedef _EmMidiPortCountNative = ffi.Int32 Function(ffi.Pointer<ffi.Void> e);
typedef _EmMidiPortCountDart = int Function(ffi.Pointer<ffi.Void> e);

typedef _EmMidiPortNameNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 index,
    ffi.Pointer<ffi.Char> buf, ffi.Int32 bufLen);
typedef _EmMidiPortNameDart = void Function(
    ffi.Pointer<ffi.Void> e, int index,
    ffi.Pointer<ffi.Char> buf, int bufLen);

typedef _EmMidiPortOpenNative = ffi.Bool Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 index);
typedef _EmMidiPortOpenDart = bool Function(
    ffi.Pointer<ffi.Void> e, int index);

// ─── MIDI output typedefs ──────────────────────────────────────────────────

typedef _EmMidiOutputPortCountNative = ffi.Int32 Function(
    ffi.Pointer<ffi.Void> e);
typedef _EmMidiOutputPortCountDart = int Function(
    ffi.Pointer<ffi.Void> e);

typedef _EmMidiOutputPortNameNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 index,
    ffi.Pointer<ffi.Char> buf, ffi.Int32 bufLen);
typedef _EmMidiOutputPortNameDart = void Function(
    ffi.Pointer<ffi.Void> e, int index,
    ffi.Pointer<ffi.Char> buf, int bufLen);

typedef _EmMidiOutputOpenNative = ffi.Bool Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 index);
typedef _EmMidiOutputOpenDart = bool Function(
    ffi.Pointer<ffi.Void> e, int index);

typedef _EmMidiOutputSendNoteOnNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Uint8 channel, ffi.Uint8 note, ffi.Uint8 velocity);
typedef _EmMidiOutputSendNoteOnDart = void Function(
    ffi.Pointer<ffi.Void> e, int channel, int note, int velocity);

typedef _EmMidiOutputSendNoteOffNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Uint8 channel, ffi.Uint8 note);
typedef _EmMidiOutputSendNoteOffDart = void Function(
    ffi.Pointer<ffi.Void> e, int channel, int note);

typedef _EmMidiOutputSendCCNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Uint8 channel, ffi.Uint8 cc, ffi.Uint8 value);
typedef _EmMidiOutputSendCCDart = void Function(
    ffi.Pointer<ffi.Void> e, int channel, int cc, int value);

typedef _EmMidiOutputSendProgramChangeNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Uint8 channel, ffi.Uint8 program);
typedef _EmMidiOutputSendProgramChangeDart = void Function(
    ffi.Pointer<ffi.Void> e, int channel, int program);

typedef _EmMidiOutputSendBankProgramNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Uint8 channel, ffi.Uint8 bankMSB, ffi.Uint8 bankLSB, ffi.Uint8 program);
typedef _EmMidiOutputSendBankProgramDart = void Function(
    ffi.Pointer<ffi.Void> e, int channel, int bankMSB, int bankLSB, int program);

typedef _EmMidiGetLastProgramChangeNative = ffi.Uint8 Function(
    ffi.Pointer<ffi.Void> e, ffi.Int32 slot);
typedef _EmMidiGetLastProgramChangeDart = int Function(
    ffi.Pointer<ffi.Void> e, int slot);

typedef _EmMidiOutputSendSysexNative = ffi.Void Function(
    ffi.Pointer<ffi.Void> e, ffi.Pointer<ffi.Uint8> data, ffi.Int32 len);
typedef _EmMidiOutputSendSysexDart = void Function(
    ffi.Pointer<ffi.Void> e, ffi.Pointer<ffi.Uint8> data, int len);

typedef _EmMidiOutputIsOpenNative = ffi.Bool Function(ffi.Pointer<ffi.Void> e);
typedef _EmMidiOutputIsOpenDart   = bool Function(ffi.Pointer<ffi.Void> e);
typedef _EmMidiOutputCloseNative  = ffi.Void Function(ffi.Pointer<ffi.Void> e);
typedef _EmMidiOutputCloseDart    = void Function(ffi.Pointer<ffi.Void> e);

// Log ring buffer poll (no engine pointer — global)
typedef _EmLogPollNative = ffi.Int32 Function(ffi.Pointer<ffi.Char> buf, ffi.Int32 len);
typedef _EmLogPollDart   = int Function(ffi.Pointer<ffi.Char> buf, int len);

typedef _EmAudioLatencyNative = ffi.Double Function(ffi.Pointer<ffi.Void> e);
typedef _EmAudioLatencyDart = double Function(ffi.Pointer<ffi.Void> e);

// ─── EmBridge singleton ──────────────────────────────────────────────────────

class EmBridge {
  EmBridge._() {
    _lib = _loadLibrary();
    _engine = _lib
        .lookupFunction<_EmCreateNative, _EmCreateDart>('em_create')();
  }

  static final EmBridge instance = EmBridge._();

  late final ffi.DynamicLibrary _lib;
  late ffi.Pointer<ffi.Void> _engine;

  bool get hasEngine =>
      _engine != ffi.nullptr && _engine.address != 0;

  // ── Library loading ────────────────────────────────────────────────────────

  static ffi.DynamicLibrary _loadLibrary() {
    if (Platform.isMacOS) {
      return ffi.DynamicLibrary.open('libem_engine.dylib');
    } else if (Platform.isIOS) {
      return ffi.DynamicLibrary.process();
    } else if (Platform.isAndroid || Platform.isLinux) {
      return ffi.DynamicLibrary.open('libem_engine.so');
    } else if (Platform.isWindows) {
      return ffi.DynamicLibrary.open('em_engine.dll');
    }
    throw UnsupportedError('Platform not supported: ${Platform.operatingSystem}');
  }

  // ── Cached function lookups ────────────────────────────────────────────────
